--- a/materialize/project_files/index.html
+++ b/materialize/project_files/index.html
@@ -12,18 +12,10 @@
 <body>
      <div class="container">
         <div class="row">
-            <div class="col s1">1</div>
-            <div class="col s2">2</div>
-            <div class="col s3">3</div>
-            <div class="col s4">4</div>
-            <div class="col s5">5</div>
-            <div class="col s6">6</div>
-            <div class="col s7">7</div>
-            <div class="col s8">8</div>
-            <div class="col s9">9</div>
-            <div class="col s10">10</div>
-            <div class="col s11">11</div>
-            <div class="col s12">12</div>
+            <div class="col s12 m6 l4 xl3">some pics1</div>
+            <div class="col s12 m6 l4 xl3">some pics2</div>
+            <div class="col s12 m6 l4 xl3">some pics3</div>
+            <div class="col s12 m6 l4 xl3">some pics4</div>
           </div>
      </div>
     <!--JavaScript at end of body for optimized loading-->
