Add animation practice code

--- a/CSS/animation/animation.html
+++ b/CSS/animation/animation.html
@@ -1,13 +1,15 @@
-<style>
-    #scale_inc {
-        -webkit-transform: scale(1.5, 2);
-        -ms-transform: scale(1.5, 2);
-        transform: scale(1.5, 2);
-    }
-
-    #scale_dec {
-        -webkit-transform: scale(0.7, 0.7);
-        -ms-transform: scale(0.7, 0.7);
-        transform: scale(0.7, 0.7);
-    }
-</style>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+        <link rel="stylesheet" href="./animation.css" />
+        <title>animation playground</title>
+    </head>
+    <body>
+        <div class="bounceIn">
+            <h1>BOUNCE IN!</h1>
+        </div>
+    </body>
+</html>
